Deckblatt verändert und angesprochene Kleinigkeiten aus dem Gruppentreffen angepasst

--- a/Deckblatt.tex
+++ b/Deckblatt.tex
@@ -15,22 +15,35 @@
 
 
 
+
+
+
+
+\end{verbatim}
+\begin{center}
+\includegraphics[width=0.5\textwidth]{EarablesBild.PNG}
+\end{center}
+\begin{verbatim}
+
+
+
+
 \end{verbatim}
 
 
   \begin{tabular}[t]{p{4 cm}p{8 cm}}
-	Projekt:       & \projektName \\[1.2ex]
+	%%Projekt:       & \projektName \\[1.2ex]
 	Auftraggeber:  & \auftraggeber\\[1.2ex]
 	Auftragnehmer: & \auftragnehmer\\[1.2ex]
   \end{tabular}
 
 
-\begin{tabular}[t]{|p{4 cm}|p{8 cm}|}
-\hline
-\textbf{Datum} & \textbf{Autor(en)} \\
-\hline
-\hline
-\today & \authorName \\
-\hline
-\end{tabular}
+%%\begin{tabular}[t]{|p{4 cm}|p{8 cm}|}
+%%\hline
+%%\textbf{Datum} & \textbf{Autor(en)} \\
+%%\hline
+%%\hline
+%%\today & \authorName \\
+%%\hline
+%%\end{tabular}
 \end{titlepage}
