Architekturdiagramm digitalisiert und hinzugefügt

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -248,6 +248,12 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
 \section{Systemmodelle}
 %%TODO Jan!!
   \subsection{Architekturdiagramm}
+  \begin{center}
+  	\vspace{100px}
+  	\includegraphics[width=0.8\textwidth]{Architekturdiagramm.png}
+  	\caption{Architekturdiagramm.png}
+  \end{center}
+  
   \subsection{Use-Case-Diagramme}
 \begin{center}
 \includegraphics[width=0.8\textwidth]{Vorlaeufiges Use-Case Diagram.pdf} %%Textuelle Beschreibung wird noch ergänzt.
