--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -259,12 +259,12 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
   \subsection{Architekturdiagramm}
   \begin{center}
   	\vspace{100px}
-  	\includegraphics[width=0.8\textwidth]{Architekturdiagramm.png}
+  	\includegraphics[width=0.8\textwidth]{NeuesArchitekturdiagramm.png}
   \end{center}
   
   \subsection{Use-Case-Diagramm}
   \begin{center}
-	\includegraphics[width=0.8\textwidth]{Use-Case Diagramm.png} 
+	\includegraphics[width=0.8\textwidth]{Use-CaseDiagramm.png} 
   \end{center}
 
 Kurzbeschreibung: Beim Starten der App durch den Nutzer startet automatisch der Laufmodus. Der Nutzer kann nun entweder den Modus wechseln oder einen Vorgang starten. Nach Beendigung oder Stoppen des Vorgangs wird das Vorgangsresultat angezeigt. Der Nutzer kann außerdem die Vorgangsdaten des letzten Monats einsehen und seine Daten importieren/exportieren. Das Ändern von Einstellungen und der damit verbundenen Steuerungsparameter der Earables ist ebenfalls möglich.
