--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -284,44 +284,49 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools "Mock-up" über den
 	\centering
 
 	
-		\begin{minipage}[b]{0.4\textwidth}
+		\begin{minipage}{0.4\textwidth}
 			\includegraphics[width=4cm,height=9cm]{./Benutzeroberflaeche/Laufmodus.png}
 			\caption{Laufmodus}
+			\vspace{30px}
 		\end{minipage}
 			\hfill
-		\begin{minipage}[b]{0.4\textwidth}
+		\begin{minipage}{0.4\textwidth}
 			\includegraphics[width=4cm,height=9cm]{./Benutzeroberflaeche/Laufmodus_aktiv.png}
 			\caption{aktiver Laufmodus}
+			\vspace{30px}
 		\end{minipage}
-		\begin{minipage}[b]{0.4\textwidth}
+		\begin{minipage}{0.4\textwidth}
 			\includegraphics[width=4cm,height=9cm]{./Benutzeroberflaeche/Musikmodus.png}
 			\caption{Musikmodus}
 		\end{minipage}
 		\hfill
-		\begin{minipage}[b]{0.4\textwidth}
+		\begin{minipage}{0.4\textwidth}
 			\includegraphics[width=4cm,height=9cm]{./Benutzeroberflaeche/Musikmodus_aktiv.png}
 			\caption{aktiver Musikmodus}
+			
 		\end{minipage}
 \end{figure}
 
 \begin{figure}[ht!]
 	
 	\centering
-	\begin{minipage}[b]{0.4\textwidth}
+	\begin{minipage}{0.4\textwidth}
 		\includegraphics[width=4cm,height=9cm]{./Benutzeroberflaeche/Lauschen_und_Agieren.png}
 		\caption{Lauschen und Agieren}
+		\vspace{30px}
 	\end{minipage}
-\hfill
-	\begin{minipage}[b]{0.4\textwidth}
+	\hfill
+	\begin{minipage}{0.4\textwidth}
 		\includegraphics[width=4cm,height=9cm]{./Benutzeroberflaeche/Lauschen_und_Agieren_aktiv.png}
 		\caption{Lauschen und Agieren aktiv}
+		\vspace{30px}
 	\end{minipage}
-	\begin{minipage}[b]{0.4\textwidth}
+	\begin{minipage}{0.4\textwidth}
 		\includegraphics[width=4cm,height=9cm]{./Benutzeroberflaeche/Zaehlmodus.png}
 		\caption{Zählmodus}		
 	\end{minipage}
-\hfill
-	\begin{minipage}[b]{0.4\textwidth}	
+	\hfill
+	\begin{minipage}{0.4\textwidth}	
 		\includegraphics[width=4cm,height=9cm]{./Benutzeroberflaeche/Zaehlmodus_aktiv.png}
 		\caption{Zählmodus aktiv}
 		
@@ -329,25 +334,29 @@ Die \Gls{GUI} kann getestet werden mithilfe des Design-Tools "Mock-up" über den
 \end{figure}
 \begin{figure}[ht!]
 	\centering
-	\begin{minipage}[b]{0.4\textwidth}
+	\begin{minipage}{0.4\textwidth}
 		\includegraphics[width=4cm,height=9cm]{./Benutzeroberflaeche/Sidemenu.png}
 		\caption{Navigationsmenu}
+		\vspace{30px}
 	\end{minipage}
 	\hfill
-	\begin{minipage}[b]{0.4\textwidth}
+	\begin{minipage}{0.4\textwidth}
 		\includegraphics[width=4cm,height=9cm]{./Benutzeroberflaeche/Datenuebersicht.png}
 		\caption{Datenübersicht}
+		\vspace{30px}
 	\end{minipage}
-	\begin{minipage}[b]{0.4\textwidth}
+	\begin{minipage}{0.4\textwidth}
 		\includegraphics[width=4cm,height=9cm]{./Benutzeroberflaeche/Import_Export.png}
 		\caption{Import und Export}
 	\end{minipage}
 	\hfill
-	\begin{minipage}[b]{0.4\textwidth}
+	\begin{minipage}{0.4\textwidth}
 		\includegraphics[width=4cm,height=9cm]{./Benutzeroberflaeche/Settings.png}
 		\caption{Einstellungen}
 	\end{minipage}
 \end{figure}
+\newpage
+\clearpage
 
 \section{Qualitätszielbestimmungen}
 \begin{tabular}[t]{|c|c|c|c|c|c|}
