Kleinigkeit bei den Wunschanfordrungen geändert

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -127,7 +127,7 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
       \begin{itemize}
         \item\text Im Modus \glqq Zählmodus\grqq{} zählt die App wie viele Liegestützen oder Sit-ups der Nutzer macht.
         \item\text  Im Modus \glqq Lauschen\&Agieren\grqq{}kann der Nutzer seinen eigenen Trainingsplan erstellen, welcher dann über Text to Speech ausgegeben wird.
-        \item\text  Der \glqq Laufmodus \grqq{} wird mit dem \glqq Musikmodus\grqq{} erweitert so dass, Musik abgespielt wird, wenn der Nutzer läuft. Wenn der Nutzer stehen bleibt wird die Musik automatisch gestoppt.
+        \item\text  Im Modus \glqq Musikmodus\grqq{} wird Musik abgespielt, wenn der Nutzer läuft und automatisch pausiert, wenn der Nutzer steht. Sobald der Nutzer weiter läuft wird die Musik auch wieder weiterlaufen.
       \end{itemize}
     \item\text Im \glqq Laufmodus \grqq{} wird die aktuelle Schrittanzahl und die zurückgelegte Distanz life angezeigt.
     \item\text Die App wird standardmäßig auf Deutsch sein, als weitere Sprache steht dem Nutzer Englisch zur Auswahl.
