bei zwei FAs Glossareinträge richtiggestellt

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -166,7 +166,7 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
   \subsection{Mussanforderungen}
     \subsubsection{Bibliothek}
     \begin{itemize}
-      \item[/F010/] Daten des %%\Gls{IMU} und in \Gls{Echtzeit} zur Verfügung stellen.
+      \item[/F010/] Daten des \Gls{6-Achsen IMU} in \Gls{Echtzeit} zur Verfügung stellen.
       \item[/F030/] Messparameter (Abtastrate, Wertebereich Gyroskop/Beschleunigungssensor, Tiefpassfilter) ändern. 
       \item[/F040/] Datenaufnahme des IMU starten und stoppen.
     \end{itemize}
